--- a/Spring Boot/testMockDB/src/main/resources/application.yml
+++ b/Spring Boot/testMockDB/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     password: psw1234
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
   h2:
     console:
       enabled: true
