--- a/Spring Boot/CrudOperations/src/main/resources/application.yml
+++ b/Spring Boot/CrudOperations/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     database: mysql
     show_sql: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
   jackson:
     serialization:
       fail-on-empty-beans: false
