--- a/Spring Boot/deploy02/src/main/resources/application.yml
+++ b/Spring Boot/deploy02/src/main/resources/application.yml
@@ -1,2 +1,22 @@
+spring:
+  config:
+    activate:
+      on-profile:
 server:
   port: 5000
+
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
+server:
+  port: 7070
+
+---
+spring:
+  config:
+    activate:
+      on-profile: test
+server:
+  port: 4000
